--- a/stopwatch/styles.css
+++ b/stopwatch/styles.css
@@ -1,65 +1,84 @@
-/* styles.css */
 body {
+    background: linear-gradient(to bottom, #1e3c72, #2a5298);
+    font-family: 'Arial', sans-serif;
+    color: white;
+    text-align: center;
     margin: 0;
     padding: 0;
-    font-family: Arial, sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     height: 100vh;
-    background-image: url('bg1.jpg');
+    background-image: url(image.png);
+    background-repeat: no-repeat;
     background-size: cover;
-    background-position: center;
-    color: white;
-}
+  }
 
-.container {
-    text-align: center;
-    background: rgba(0, 0, 0, 0.7);
-    padding: 20px;
+  .stopwatch-container {
+    margin: 0 auto;
+    padding: 30px;
     border-radius: 10px;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    background: rgba(255, 255, 255, 0.1);
+    width: 100%;
+    max-width: 1000px;
+    margin-top: 1%;
 }
 
-h1 {
+img {
+    position: absolute;
+    top: 35px;
+    right: -60px;
+    width: 350px;
+    height: 350px; 
+  }
+  
+  .stopwatch-display {
+    font-size: 48px;
+    font-weight: bold;
     margin-bottom: 20px;
-}
+    color: #f0f0f0;
+  }
 
-.stopwatch {
-    font-size: 3rem;
-    margin-bottom: 20px;
-}
-
-.buttons button {
+  .buttons-container button {
+    background: #0a0172;
+    color: white;
+    border: none;
     padding: 10px 20px;
     margin: 5px;
-    font-size: 1rem;
-    border: none;
     border-radius: 5px;
+    font-size: 16px;
     cursor: pointer;
-    color: white;
-    background-color: #007BFF;
     transition: background-color 0.3s;
-}
+  }
+  
+  .buttons-container button:hover {
+    background: #2a962f;
+  }
+  
+  .buttons-container button:active {
+    background: #388e3c;
+  }
 
-.buttons button:hover {
-    background-color: #0056b3;
-}
-
-.laps {
+  .laps-container {
     margin-top: 20px;
-    text-align: left;
-}
-
-.laps ul {
-    list-style-type: none;
+    text-align: center;
+    color: rgb(254, 250, 250);
+    font-size: 1.5rem;
+  }
+  
+  .laps-container ul {
+    list-style: none;
     padding: 0;
-}
-
-.laps ul li {
-    background: rgba(255, 255, 255, 0.2);
-    padding: 5px 10px;
-    margin: 5px 0;
+    font-size: 1rem;
+  }
+  
+  .laps-container li {
+    padding: 10px;
+    background: rgba(255, 255, 255, 0.1);
+    margin-bottom: 5px;
     border-radius: 5px;
-    color: white;
-}
+    border-left: 4px solid #2a962f;
+  }
+
+  .laps-container li:nth-child(even) {
+    background: rgba(255, 255, 255, 0.2);
+  }
+  
